kubernetes/kustomize-manifest/spring-petclinic/base/ingress-spring-petclinic.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-petclinic
spec:
  ingressClassName: nginx
  rules:
  - host: spring-petclinic.user1.apps.taikang1.local
    http:
      paths:
      - backend:
          service:
            name: spring-petclinic
            port:
              number: 8080
        path: /
        pathType: Prefix
